# schubert-toolbox

./: .bazelignore  .bazelrc  .cursorrules  .env.example  .gitignore  AGENTS.md  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
.augment/: instructions.md
.claude/: instructions.md
.codex/: instructions.md
.cursor/: instructions.md
.gemini/: instructions.md
.github/: README.md
.github/ISSUE_TEMPLATE/: feature-parity.md
.github/copilot/: .copilot-instructions  instructions.md
.github/scripts/: detect-changes.sh  test-locally.sh  validate-ci.sh
.github/workflows/: selective-tests.yml
.trae/: instructions.md
docs/: ci-cd-setup.md  index.md
docs/llms/: code_quality_rules.md  default_llms_instructions.md
docs/python/: LINTING.md  README.md
docs/python/contracts/: README.md  contracts_overview.md  formatter_contract.md  manager_contract.md
docs/python/drivers/: README.md  company_cnpjws_driver.md  company_drivers.md  company_opencnpj_driver.md  formatter_drivers.md  postal_code_drivers.md
docs/python/managers/: README.md  company_manager.md  implemented_managers.md
js/: .eslintrc.js  BUILD.bazel  jest.config.js  package.json
js/src/: index.ts
js/tests/: BUILD.bazel
php/: BUILD.bazel  composer.json  phpstan.neon  phpunit.xml
php/tests/: BUILD.bazel
python/: .pre-commit-config.yaml  BUILD.bazel  Makefile  __init__.py  lint.py  pyproject.toml  requirements.txt  run_tests.py  setup.py
python/examples/: company_lookup_demo.py
python/src/: __init__.py
python/src/contracts/: __init__.py  formatter_contract.py  manager_contract.py
python/src/drivers/: __init__.py
python/src/drivers/company/: __init__.py  company_brasilapi_driver.py  company_cnpja_driver.py  company_cnpjws_driver.py  company_opencnpj_driver.py
python/src/drivers/formatter/: __init__.py  formatter_brazilian_cnpj_driver.py  formatter_brazilian_postalcode_driver.py
python/src/drivers/postalcode/: __init__.py  postalcode_brasilapi_driver.py  postalcode_viacep_driver.py  postalcode_widenet_driver.py
python/src/managers/: __init__.py  async_driver_wrapper.py  company_manager.py  formatter_manager.py  postalcode_manager.py
python/src/standards/: __init__.py  company.py
python/src/standards/address/: __init__.py  address.py
python/src/standards/core/: base.py
python/src/standards/person/: person.py
python/src/utils/: __init__.py  logging_security.py
python/tests/: BUILD.bazel  __init__.py
python/tests/bdd/: __init__.py
python/tests/integration/: test_all_drivers_integration.py  test_cnpj_formatter_integration.py  test_company_cnpja_driver.py  test_company_cnpjws_driver.py  test_company_opencnpj_driver.py  test_postalcode_brasilapi_driver.py  test_postalcode_viacep_driver.py  test_postalcode_widenet_driver.py  test_standards_compliance.py  test_validator_manager.py
python/tests/integration/cassettes/: all_drivers_integration.yaml  brasilapi_different_formats.yaml  brasilapi_invalid_cep.yaml  brasilapi_malformed_cep.yaml  brasilapi_valid_cep.yaml  cnpja_digitalbanks_cnpj.yaml  cnpja_invalid_cnpj.yaml  cnpja_valid_cnpj_unformatted.yaml  cnpjws_data_structure.yaml  cnpjws_invalid_cnpj.yaml  opencnpj_digitalbanks_cnpj.yaml  opencnpj_invalid_cnpj.yaml  opencnpj_valid_cnpj_unformatted.yaml  viacep_address_components.yaml  viacep_different_formats.yaml  viacep_invalid_cep.yaml  viacep_malformed_cep.yaml  viacep_valid_cep.yaml  widenet_different_formats.yaml  widenet_invalid_cep.yaml  widenet_malformed_cep.yaml  widenet_valid_cep.yaml
python/tests/unit/: __init__.py  test_company_drivers.py  test_company_manager.py  test_email_validator.py  test_first_to_respond.py  test_formatter_contract.py  test_formatter_manager.py  test_postalcode_drivers.py
schemas/: address.json  financial.json  person.json  pix.json
