# Configuração Bazel principal para builds/tests multi-linguagem

package(default_visibility = ["//visibility:public"])

# Target básico para verificar se o Bazel está funcionando
genrule(
    name = "hello",
    outs = ["hello.txt"],
    cmd = "echo 'Bazel está funcionando corretamente!' > $@",
)

# Targets agregados para build de todos os SDKs
filegroup(
    name = "all_sdks",
    srcs = [
        "//python:all",
        "//php:all",
        "//js:all",
    ],
)

# Targets agregados para testes de todos os SDKs
filegroup(
    name = "all_tests",
    srcs = [
        "//python/tests:all",
        "//php/tests:all",
        "//js/tests:all",
    ],
)

# Aggregated test execution targets
genrule(
    name = "run_python_tests",
    srcs = ["//python/tests:run_all_tests"],
    outs = ["python_test_summary.txt"],
    cmd = "cp $(location //python/tests:run_all_tests) $@",
    tags = ["python", "tests"],
)

genrule(
    name = "run_php_tests",
    srcs = ["//php/tests:run_all_tests"],
    outs = ["php_test_summary.txt"],
    cmd = "cp $(location //php/tests:run_all_tests) $@",
    tags = ["php", "tests"],
)

genrule(
    name = "run_js_tests",
    srcs = ["//js/tests:run_all_tests"],
    outs = ["js_test_summary.txt"],
    cmd = "cp $(location //js/tests:run_all_tests) $@",
    tags = ["js", "tests"],
)

# Run all SDK tests
genrule(
    name = "run_all_sdk_tests",
    srcs = [
        "//python/tests:run_all_tests",
        "//php/tests:run_all_tests",
        "//js/tests:run_all_tests",
    ],
    outs = ["all_sdk_test_summary.txt"],
    cmd = """
        echo "=== Python Test Results ===" > $@ && \
        cat $(location //python/tests:run_all_tests) >> $@ && \
        echo "=== PHP Test Results ===" >> $@ && \
        cat $(location //php/tests:run_all_tests) >> $@ && \
        echo "=== JavaScript Test Results ===" >> $@ && \
        cat $(location //js/tests:run_all_tests) >> $@
    """,
    tags = ["all", "tests"],
)

