[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schubert-toolbox"
version = "0.1.0"
description = "Schubert Toolbox - SDK Python com ferramentas e utilitários padronizados"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Raphael Schubert", email = "contato@schubert.com.br"}
]
keywords = ["sdk", "toolbox", "utilities"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Adicionar dependências conforme necessário
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/schubert-toolbox"
Documentation = "https://github.com/your-org/schubert-toolbox/docs"
Repository = "https://github.com/your-org/schubert-toolbox"
Issues = "https://github.com/your-org/schubert-toolbox/issues"

[tool.setuptools]
packages = ["schubert_toolbox"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

