# BUILD.bazel para testes JavaScript/TypeScript

package(default_visibility = ["//visibility:public"])

# Arquivos de teste
filegroup(
    name = "test_srcs",
    srcs = glob(["**/*.test.ts", "**/*.test.js", "**/*.spec.ts", "**/*.spec.js"], allow_empty = True),
)

# Target agregado para todos os testes
filegroup(
    name = "all",
    srcs = [
        ":test_srcs",
    ],
)

# Test execution targets using genrule for Jest
genrule(
    name = "run_unit_tests",
    srcs = [":test_srcs", "//js:srcs"],
    outs = ["unit_test_results.txt"],
    cmd = """
        cd js && \
        if [ -f "package.json" ] && [ -d "node_modules" ]; then \
            npm run test:unit > $(location unit_test_results.txt) 2>&1 || \
            (echo "Unit tests failed" > $(location unit_test_results.txt) && exit 1); \
        else \
            echo "Jest not available or dependencies not installed" > $(location unit_test_results.txt); \
        fi
    """,
    tags = ["js", "unit"],
)

genrule(
    name = "run_integration_tests",
    srcs = [":test_srcs", "//js:srcs"],
    outs = ["integration_test_results.txt"],
    cmd = """
        cd js && \
        if [ -f "package.json" ] && [ -d "node_modules" ]; then \
            npm run test:integration > $(location integration_test_results.txt) 2>&1 || \
            (echo "Integration tests failed" > $(location integration_test_results.txt) && exit 1); \
        else \
            echo "Jest not available or dependencies not installed" > $(location integration_test_results.txt); \
        fi
    """,
    tags = ["js", "integration"],
)

# Aggregated test target for all JavaScript tests
genrule(
    name = "run_all_tests",
    srcs = [":test_srcs", "//js:srcs"],
    outs = ["all_test_results.txt"],
    cmd = """
        cd js && \
        if [ -f "package.json" ] && [ -d "node_modules" ]; then \
            npm test > $(location all_test_results.txt) 2>&1 || \
            (echo "All JavaScript tests failed" > $(location all_test_results.txt) && exit 1); \
        else \
            echo "Jest not available or dependencies not installed" > $(location all_test_results.txt); \
        fi
    """,
    tags = ["js", "all"],
)

