# BUILD.bazel para testes PHP

package(default_visibility = ["//visibility:public"])

# Arquivos de teste PHP
filegroup(
    name = "test_srcs",
    srcs = glob(["**/*Test.php", "**/*_test.php"], allow_empty = True),
)

# Target agregado para todos os testes
filegroup(
    name = "all",
    srcs = [
        ":test_srcs",
    ],
)

# Test execution targets using genrule for PHPUnit
genrule(
    name = "run_unit_tests",
    srcs = [":test_srcs", "//php:srcs"],
    outs = ["unit_test_results.txt"],
    cmd = """
        cd php && \
        if [ -f "composer.json" ] && [ -d "vendor" ]; then \
            vendor/bin/phpunit tests/Unit/ --verbose > $(location unit_test_results.txt) 2>&1 || \
            (echo "Unit tests failed" > $(location unit_test_results.txt) && exit 1); \
        else \
            echo "PHPUnit not available or dependencies not installed" > $(location unit_test_results.txt); \
        fi
    """,
    tags = ["php", "unit"],
)

genrule(
    name = "run_integration_tests",
    srcs = [":test_srcs", "//php:srcs"],
    outs = ["integration_test_results.txt"],
    cmd = """
        cd php && \
        if [ -f "composer.json" ] && [ -d "vendor" ]; then \
            vendor/bin/phpunit tests/Integration/ --verbose > $(location integration_test_results.txt) 2>&1 || \
            (echo "Integration tests failed" > $(location integration_test_results.txt) && exit 1); \
        else \
            echo "PHPUnit not available or dependencies not installed" > $(location integration_test_results.txt); \
        fi
    """,
    tags = ["php", "integration"],
)

# Aggregated test target for all PHP tests
genrule(
    name = "run_all_tests",
    srcs = [":test_srcs", "//php:srcs"],
    outs = ["all_test_results.txt"],
    cmd = """
        cd php && \
        if [ -f "composer.json" ] && [ -d "vendor" ]; then \
            vendor/bin/phpunit tests/ --verbose > $(location all_test_results.txt) 2>&1 || \
            (echo "All PHP tests failed" > $(location all_test_results.txt) && exit 1); \
        else \
            echo "PHPUnit not available or dependencies not installed" > $(location all_test_results.txt); \
        fi
    """,
    tags = ["php", "all"],
)

