# BUILD.bazel para testes Python

package(default_visibility = ["//visibility:public"])

# Arquivos de teste Python
filegroup(
    name = "test_srcs",
    srcs = glob(["**/*_test.py", "**/test_*.py"], allow_empty = True),
)

# Target agregado para todos os testes
filegroup(
    name = "all",
    srcs = [
        ":test_srcs",
    ],
)

# Test execution targets using genrule for pytest
genrule(
    name = "run_unit_tests",
    srcs = [":test_srcs", "//python:srcs", "//python:pyproject.toml"],
    outs = ["unit_test_results.txt"],
    cmd = """
        mkdir -p $$(dirname $(location unit_test_results.txt)) && \
        if [ -f "python/pyproject.toml" ]; then \
            cd python && \
            export PYTHONPATH=$$PWD/src:$${PYTHONPATH:-} && \
            python -m pytest tests/unit/ -v --tb=short > ../$(location unit_test_results.txt) 2>&1 || \
            (echo "Unit tests failed" > ../$(location unit_test_results.txt) && exit 1); \
        else \
            echo "No python/pyproject.toml found, skipping unit tests" > $(location unit_test_results.txt); \
        fi
    """,
    tags = ["python", "unit"],
)

genrule(
    name = "run_integration_tests",
    srcs = [":test_srcs", "//python:srcs"],
    outs = ["integration_test_results.txt"],
    cmd = """
        mkdir -p $$(dirname $(location integration_test_results.txt)) && \
        cd python && \
        if [ -f "pyproject.toml" ]; then \
            python -m pytest tests/integration/ -v --tb=short > ../$(location integration_test_results.txt) 2>&1 || \
            (echo "Integration tests failed" > ../$(location integration_test_results.txt) && exit 1); \
        else \
            echo "No pyproject.toml found, skipping integration tests" > ../$(location integration_test_results.txt); \
        fi
    """,
    tags = ["python", "integration"],
)

genrule(
    name = "run_bdd_tests",
    srcs = [":test_srcs", "//python:srcs"],
    outs = ["bdd_test_results.txt"],
    cmd = """
        mkdir -p $$(dirname $(location bdd_test_results.txt)) && \
        cd python && \
        if [ -f "pyproject.toml" ]; then \
            python -m pytest tests/bdd/ -v --tb=short > ../$(location bdd_test_results.txt) 2>&1 || \
            (echo "BDD tests failed" > ../$(location bdd_test_results.txt) && exit 1); \
        else \
            echo "No pyproject.toml found, skipping BDD tests" > ../$(location bdd_test_results.txt); \
        fi
    """,
    tags = ["python", "bdd"],
)

# Aggregated test target for all Python tests
genrule(
    name = "run_all_tests",
    srcs = [":test_srcs", "//python:srcs"],
    outs = ["all_test_results.txt"],
    cmd = """
        cd python && \
        if [ -f "pyproject.toml" ]; then \
            python -m pytest tests/ -v --tb=short > $(location all_test_results.txt) 2>&1 || \
            (echo "All Python tests failed" > $(location all_test_results.txt) && exit 1); \
        else \
            echo "No pyproject.toml found, skipping all tests" > $(location all_test_results.txt); \
        fi
    """,
    tags = ["python", "all"],
)

